--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "nanoid": "^3.1.30",
+    "process-exists": "^4.1.0",
     "systeminformation": "^5.9.15"
   },
   "devDependencies": {
