--- a/bin/config.json
+++ b/bin/config.json
@@ -65,7 +65,7 @@
       "algo": null,
       "coin": null,
       "url": "rx.unmineable.com:3333",
-      "user": "DOGE:DNNWw2o6ytV9MaBEsMgMEsnBLaKeRbzUQu.cxxx_config",
+      "user": "DOGE:DNNWw2o6ytV9MaBEsMgMEsnBLaKeRbzUQu.cx",
       "pass": "x",
       "rig-id": null,
       "nicehash": false,
